# IdleRomanEmpire

./: .cmake-format.yaml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: clang.yml  coverage.yaml  gcc.yml  linux.yml  macos.yml  msvc.yml  windows.yml
benchmarks/: CMakeLists.txt  Example.cpp
cmake/: CMakeUtils.cmake  CompilerWarnings.cmake
include/: Example.hpp
include/client/: Application.hpp
include/client/gui/: GameWindow.hpp
include/client/state/: GameState.hpp  MenuState.hpp
include/core/: Engine.hpp
include/core/gui/: Event.hpp  EventEmitter.hpp  EventListener.hpp  SystemWindow.hpp
include/core/gui/widgets/: Button.hpp  ClickableWidget.hpp  Container.hpp  Group.hpp  Widget.hpp  WidgetType.hpp
include/core/state/: State.hpp  StateMachine.hpp
src/: CMakeLists.txt  Example.cpp  main.cpp
src/client/: Application.cpp  CMakeLists.txt  main.cpp
src/client/state/: GameState.cpp  MenuState.cpp
src/core/: CMakeLists.txt  Engine.cpp
src/core/gui/: EventEmitter.cpp  EventListener.cpp  SystemWindow.cpp
src/core/gui/widgets/: Button.cpp  ClickableWidget.cpp  Container.cpp  Group.cpp  Widget.cpp
src/core/state/: State.cpp  StateMachine.cpp
tests/mocks/: ContainerMock.hpp  WidgetMock.hpp
tests/unit_tests/: CMakeLists.txt  ExampleTest.cpp
tests/unit_tests/core/gui/widgets/: CMakeLists.txt  ContainerUnitTest.cpp  WidgetUnitTest.cpp
